--- a/register.html
+++ b/register.html
@@ -1,59 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="./dist/styles.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-          crossorigin="anonymous">
-    <style>
-        .login{
-            background: url('./dist/images/login-new.jpeg')
-        }
-    </style>
-    <title>Register</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="./dist/styles.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
+  <title>Register | Tailwind Admin</title>
 </head>
-<body class="h-screen font-sans login bg-cover">
-<div class="container mx-auto h-full flex flex-1 justify-center items-center">
-    <div class="w-full max-w-lg">
-        <div class="leading-loose">
-            <form class="max-w-xl m-4 p-10 bg-white rounded shadow-xl">
-                <p class="text-gray-800 font-medium">Register</p>
-                <div class="">
-                    <label class="block text-sm text-gray-00" for="cus_name">Name</label>
-                    <input class="w-full px-5 py-1 text-gray-700 bg-gray-200 rounded" id="cus_name" name="cus_name" type="text" required="" placeholder="Your Name" aria-label="Name">
-                </div>
-                <div class="mt-2">
-                    <label class="block text-sm text-gray-600" for="cus_email">Email</label>
-                    <input class="w-full px-5  py-4 text-gray-700 bg-gray-200 rounded" id="cus_email" name="cus_email" type="text" required="" placeholder="Your Email" aria-label="Email">
-                </div>
-                <div class="mt-2">
-                    <label class=" block text-sm text-gray-600" for="cus_email">Address</label>
-                    <input class="w-full px-2 py-2 text-gray-700 bg-gray-200 rounded" id="cus_email" name="cus_email" type="text" required="" placeholder="Street" aria-label="Email">
-                </div>
-                <div class="mt-2">
-                    <label class="hidden text-sm block text-gray-600" for="cus_email">City</label>
-                    <input class="w-full px-2 py-2 text-gray-700 bg-gray-200 rounded" id="cus_email" name="cus_email" type="text" required="" placeholder="City" aria-label="Email">
-                </div>
-                <div class="inline-block mt-2 w-1/2 pr-1">
-                    <label class="hidden block text-sm text-gray-600" for="cus_email">Country</label>
-                    <input class="w-full px-2 py-2 text-gray-700 bg-gray-200 rounded" id="cus_email" name="cus_email" type="text" required="" placeholder="Country" aria-label="Email">
-                </div>
-                <div class="inline-block mt-2 -mx-1 pl-1 w-1/2">
-                    <label class="hidden block text-sm text-gray-600" for="cus_email">Zip</label>
-                    <input class="w-full px-2 py-2 text-gray-700 bg-gray-200 rounded" id="cus_email"  name="cus_email" type="text" required="" placeholder="Zip" aria-label="Email">
-                </div>
 
-                <div class="mt-4">
-                    <button class="px-4 py-1 text-white font-light tracking-wider bg-gray-900 rounded" type="submit">Register</button>
-                </div>
-                <a class="inline-block right-0 align-baseline font-bold text-sm text-500 hover:text-blue-800" href="login.html">
-                    Already have an account ?
-                </a>
-            </form>
-        </div>
+<body class="h-screen font-sans bg-cover bg-center" style="background-image: url('./dist/images/login-new.jpeg');">
+  <div class="container mx-auto h-full flex flex-col justify-center items-center px-4 sm:px-6 lg:px-8">
+    <div class="w-full max-w-sm"> <!-- Ukuran form diperkecil -->
+      <div class="leading-loose">
+        <form class="max-w-sm m-4 p-4 bg-white rounded-lg shadow-md"> <!-- Padding diperkecil -->
+          <p class="text-gray-800 font-medium text-center text-lg font-bold">Register</p> <!-- Ukuran teks diperkecil -->
+          <div class="mt-3">
+            <label class="block text-sm text-gray-600" for="name">Name</label>
+            <input class="w-full px-3 py-2 text-gray-700 bg-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" id="name" name="name" type="text" required="" placeholder="Your Name" aria-label="Name">
+          </div>
+          <div class="mt-3">
+            <label class="block text-sm text-gray-600" for="email">Email</label>
+            <input class="w-full px-3 py-2 text-gray-700 bg-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" id="email" name="email" type="email" required="" placeholder="Your Email" aria-label="Email">
+          </div>
+          <div class="mt-3">
+            <label class="block text-sm text-gray-600" for="password">Password</label>
+            <input class="w-full px-3 py-2 text-gray-700 bg-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" id="password" name="password" type="password" required="" placeholder="Your Password" aria-label="Password">
+          </div>
+          <div class="mt-3">
+            <label class="block text-sm text-gray-600" for="confirm-password">Confirm Password</label>
+            <input class="w-full px-3 py-2 text-gray-700 bg-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" id="confirm-password" name="confirm-password" type="password" required="" placeholder="Confirm Your Password" aria-label="Confirm Password">
+          </div>
+          <div class="mt-5">
+            <button class="w-full px-3 py-2 text-white font-medium tracking-wide bg-blue-600 rounded hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500" type="submit">Register</button>
+          </div>
+          <div class="mt-3 text-center">
+            <a class="text-sm text-blue-600 hover:text-blue-800" href="login.html">Already have an account?</a>
+          </div>
+        </form>
+      </div>
     </div>
-</div>
-
+  </div>
 </body>
+
 </html>
