commit pertama setelah di update

--- a/index.html
+++ b/index.html
@@ -1,87 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dashboard</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 flex flex-col min-h-screen">
 
-  <div class="flex flex-1">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="tailwind,tailwindcss,tailwind css,css,starter template,free template,admin templates, admin template, admin dashboard, free tailwind templates, tailwind example">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Admin Dashboard | Store Management</title>
+</head>
+
+<body class="bg-gray-100">
     <!-- Sidebar -->
-    <aside id="sidebar" class="w-64 bg-gray-800 text-white min-h-screen"></aside>
+    <aside class="fixed top-0 left-0 w-64 bg-gray-800 text-white h-full z-10">
+        <div class="p-4">
+            <h1 class="text-lg font-bold">Store Admin</h1>
+        </div>
+        <nav class="mt-6">
+            <ul class="space-y-2">
+                <li><a href="index.html" class="block px-4 py-2 hover:bg-gray-700 rounded">Dashboard</a></li>
+                <li><a href="orders.html" class="block px-4 py-2 hover:bg-gray-700 rounded">Orders</a></li>
+                <li><a href="products.html" class="block px-4 py-2 hover:bg-gray-700 rounded">Products</a></li>
+                <li><a href="categories.html" class="block px-4 py-2 hover:bg-gray-700 rounded">Categories</a></li>
+                <li><a href="reports.html" class="block px-4 py-2 hover:bg-gray-700 rounded">Reports</a></li>
+                <li><a href="settings.html" class="block px-4 py-2 hover:bg-gray-700 rounded">Settings</a></li>
+            </ul>
+        </nav>
+    </aside>
 
     <!-- Main Content -->
-    <div class="flex-1 flex flex-col">
-      <!-- Header -->
-      <header id="header" class="bg-white shadow p-4"></header>
+    <div class="ml-64">
+        <!-- Header -->
+        <header class="bg-white shadow p-4 fixed top-0 left-64 right-0 z-10">
+            <div class="flex justify-between items-center">
+                <h1 class="text-lg font-bold">Dashboard</h1>
+                <div class="flex items-center space-x-4">
+                    <!-- Use random photo from template -->
+                    <img src="./dist/images/random-admin.jpg" alt="Admin Profile" class="w-8 h-8 rounded-full">
+                    <span>Admin</span>
+                </div>
+            </div>
+        </header>
 
-      <main id="dashboard" class="p-6 flex-1"></main>
+        <!-- Main Section -->
+        <main class="p-6 mt-16">
+            <!-- Stats Section -->
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-8">
+                <div class="bg-red-500 text-white rounded-lg p-6 shadow-md flex items-center">
+                    <div>
+                        <h2 class="text-2xl font-bold">$244</h2>
+                        <p class="text-sm">Total Sales</p>
+                    </div>
+                </div>
+                <div class="bg-blue-500 text-white rounded-lg p-6 shadow-md flex items-center">
+                    <div>
+                        <h2 class="text-2xl font-bold">$199.4</h2>
+                        <p class="text-sm">Total Cost</p>
+                    </div>
+                </div>
+                <div class="bg-yellow-500 text-white rounded-lg p-6 shadow-md flex items-center">
+                    <div>
+                        <h2 class="text-2xl font-bold">900</h2>
+                        <p class="text-sm">Total Users</p>
+                    </div>
+                </div>
+                <div class="bg-green-500 text-white rounded-lg p-6 shadow-md flex items-center">
+                    <div>
+                        <h2 class="text-2xl font-bold">500</h2>
+                        <p class="text-sm">Total Products</p>
+                    </div>
+                </div>
+            </div>
 
-      <!-- Footer 
-      <footer id="footer"></footer>-->
+            <!-- Recent Orders -->
+            <div class="bg-white rounded-lg shadow-md p-6">
+                <h3 class="text-lg font-semibold mb-4">Recent Orders</h3>
+                <table class="table-auto w-full text-left">
+                    <thead class="bg-gray-200">
+                        <tr>
+                            <th class="px-4 py-2">Order ID</th>
+                            <th class="px-4 py-2">Customer</th>
+                            <th class="px-4 py-2">Date</th>
+                            <th class="px-4 py-2">Status</th>
+                            <th class="px-4 py-2">Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="border px-4 py-2">#1001</td>
+                            <td class="border px-4 py-2">John Doe</td>
+                            <td class="border px-4 py-2">2025-04-28</td>
+                            <td class="border px-4 py-2 text-green-500">Completed</td>
+                            <td class="border px-4 py-2">$120.00</td>
+                        </tr>
+                        <tr>
+                            <td class="border px-4 py-2">#1002</td>
+                            <td class="border px-4 py-2">Jane Smith</td>
+                            <td class="border px-4 py-2">2025-04-27</td>
+                            <td class="border px-4 py-2 text-yellow-500">Pending</td>
+                            <td class="border px-4 py-2">$80.00</td>
+                        </tr>
+                        <tr>
+                            <td class="border px-4 py-2">#1003</td>
+                            <td class="border px-4 py-2">Alice Brown</td>
+                            <td class="border px-4 py-2">2025-04-26</td>
+                            <td class="border px-4 py-2 text-red-500">Cancelled</td>
+                            <td class="border px-4 py-2">$50.00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="bg-white shadow p-4 mt-8">
+            <p class="text-center text-gray-500 text-sm">&copy; 2025 Store Admin. All rights reserved.</p>
+        </footer>
     </div>
-  </div>
-
-  <script>
-    // Load sidebar
-    fetch('sidebar.html')
-        .then(response => response.text())
-        .then(data => {
-        document.getElementById('sidebar').innerHTML = data;
-
-        // Setelah sidebar dimuat, aktifkan fungsi klik & search
-        activateSidebarFunctions();
-        })
-        .catch(error => console.error('Error loading sidebar:', error));
-
-    // Definisikan fungsi untuk aktifkan klik menu & search setelah sidebar di-load
-    function activateSidebarFunctions() {
-        // Highlight Menu ketika diklik
-        const menuItems = document.querySelectorAll('.menu-item');
-        menuItems.forEach(item => {
-        item.addEventListener('click', function () {
-            menuItems.forEach(i => i.classList.remove('bg-blue-500', 'text-white'));
-            this.classList.add('bg-blue-500', 'text-white');
-        });
-        });
-
-        // Search Filtering
-        const searchInput = document.getElementById('searchInput');
-        if (searchInput) {
-        searchInput.addEventListener('input', function () {
-            const keyword = this.value.toLowerCase();
-            menuItems.forEach(item => {
-            const text = item.textContent.toLowerCase();
-            if (text.includes(keyword)) {
-                item.style.display = 'block';
-            } else {
-                item.style.display = 'none';
-            }
-            });
-        });
-        }
-    }
-
-    // Load header
-    fetch('header.html')
-      .then(response => response.text())
-      .then(data => document.getElementById('header').innerHTML = data)
-      .catch(error => console.error('Error loading header:', error));
-
-    // Load dashboard
-    fetch('dashboard/dashboard.html')
-      .then(response => response.text())
-      .then(data => document.getElementById('dashboard').innerHTML = data)
-      .catch(error => console.error('Error loading dashboard:', error));
-
-    // Load footer
-    //fetch('footer.html')
-      //.then(response => response.text())
-      //.then(data => document.getElementById('footer').innerHTML = data)
-      //.catch(error => console.error('Error loading footer:', error));
-  </script>
-
 </body>
+
 </html>
